src/renderer/src/assets/fumadocs-themes.css
/* ... */
:root.dark[data-fd-theme="black"] {
  --color-fd-background: hsl(0, 0%, 2%);
  --color-fd-foreground: hsl(0, 0%, 98%);
  --color-fd-muted: hsl(0, 0%, 8%);
  --color-fd-muted-foreground: hsl(0, 0%, 60%);
  --color-fd-popover: hsl(0, 0%, 4%);
  --color-fd-popover-foreground: hsl(0, 0%, 98%);
  --color-fd-card: hsl(0, 0%, 4%);
  --color-fd-card-foreground: hsl(0, 0%, 98%);
  --color-fd-border: hsl(0, 0%, 50%, 0.2);
  --color-fd-primary: hsl(0, 0%, 98%);
  --color-fd-primary-foreground: hsl(0, 0%, 9%);
  --color-fd-secondary: hsl(0, 0%, 12.9%);
  --color-fd-secondary-foreground: hsl(0, 0%, 98%);
  --color-fd-accent: hsl(0, 0%, 15%);
  --color-fd-accent-foreground: hsl(0, 0%, 100%);
  --color-fd-ring: hsl(0, 0%, 34.9%);
}

:root[data-fd-theme="vitepress"] {
  --color-fd-muted: hsl(0, 0%, 96.1%);
  --color-fd-popover: hsl(0, 0%, 100%);
  --color-fd-popover-foreground: hsl(0, 0%, 15.1%);
  --color-fd-card-foreground: hsl(0, 0%, 3.9%);
  --color-fd-border: hsl(0, 0%, 89.8%);
  --color-fd-primary-foreground: hsl(0, 0%, 98%);
  --color-fd-secondary-foreground: hsl(0, 0%, 9%);
  --color-fd-accent: hsl(0, 0%, 94.1%);
  --color-fd-ring: hsl(0, 0%, 63.9%);
  --color-fd-background: hsl(0, 0%, 100%);
  --color-fd-card: hsl(0, 0%, 100%);
  --color-fd-foreground: hsl(240, 6%, 25%);
  --color-fd-muted-foreground: hsl(240, 6%, 50%);
  --color-fd-secondary: hsl(240, 6%, 97%);
  --color-fd-accent-foreground: hsl(240, 6%, 25%);
  --color-fd-primary: hsl(226, 55%, 45%);
}

:root.dark[data-fd-theme="vitepress"] {
  --color-fd-ring: hsl(234, 100%, 83%);
  --color-fd-primary: hsl(234, 100%, 83%);
  --color-fd-secondary-foreground: hsl(60, 100%, 98%);
  --color-fd-card-foreground: hsl(60, 100%, 98%);
  --color-fd-background: hsl(240, 7%, 11%);
  --color-fd-foreground: hsl(60, 100%, 98%);
  --color-fd-popover: hsl(240, 7%, 11%);
  --color-fd-popover-foreground: hsl(60, 100%, 98%);
  --color-fd-primary-foreground: hsl(240, 7%, 11%);
  --color-fd-card: hsl(240, 7%, 11%);
  --color-fd-muted: hsl(0, 0%, 13%);
  --color-fd-border: hsl(240, 4%, 19%);
  --color-fd-accent: hsl(0, 0%, 15%);
  --color-fd-secondary: hsl(240, 4%, 9%);
  --color-fd-accent-foreground: hsl(0, 0%, 100%);
  --color-fd-muted-foreground: hsl(240, 4%, 65%);
}

:root[data-fd-theme="dusk"] {
  --color-fd-background: hsl(250, 20%, 92%);
  --color-fd-primary: hsl(340, 40%, 48%);
  --color-fd-border: hsl(240, 40%, 90%);
  --color-fd-accent: hsl(250, 30%, 90%);
  --color-fd-accent-foreground: hsl(250, 20%, 20%);
  --color-fd-muted: hsl(240, 30%, 94%);
  --color-fd-muted-foreground: hsl(240, 10%, 50%);
  --color-fd-foreground: hsl(220, 20%, 30%);
  --color-fd-secondary: hsl(250, 40%, 94%);
  --color-fd-secondary-foreground: hsl(240, 40%, 10%);
  --color-fd-card: hsl(250, 20%, 92%);
  --color-fd-card-foreground: hsl(250, 20%, 20%);
  --color-fd-popover-foreground: hsl(250, 40%, 20%);
  --color-fd-popover: hsl(250, 40%, 96%);
  --color-fd-primary-foreground: hsl(240, 80%, 20%);
  --color-fd-ring: hsl(340, 40%, 48%);
}

:root.dark[data-fd-theme="dusk"] {
  --color-fd-ring: hsl(340, 100%, 90%);
  --color-fd-primary-foreground: hsl(240, 40%, 4%);
  --color-fd-popover: hsl(240, 20%, 5%);
  --color-fd-popover-foreground: hsl(250, 20%, 90%);
  --color-fd-primary: hsl(340, 100%, 90%);
  --color-fd-border: hsl(220, 15%, 15%);
  --color-fd-background: hsl(220, 15%, 6%);
  --color-fd-foreground: hsl(220, 15%, 87%);
  --color-fd-muted: hsl(220, 20%, 15%);
  --color-fd-muted-foreground: hsl(220, 15%, 60%);
  --color-fd-accent: hsl(250, 20%, 15%);
  --color-fd-secondary: hsl(240, 20%, 15%);
  --color-fd-card-foreground: hsl(240, 15%, 87%);
  --color-fd-card: hsl(240, 20%, 5%);
  --color-fd-secondary-foreground: hsl(250, 20%, 90%);
  --color-fd-accent-foreground: hsl(340, 5%, 90%);
}

:root[data-fd-theme="catppuccin"] {
  --color-fd-popover: hsl(220, 22%, 92%);
  --color-fd-popover-foreground: hsl(234, 16%, 35%);
  --color-fd-secondary-foreground: hsl(234, 16%, 35%);
  --color-fd-border: hsl(223, 16%, 83%);
  --color-fd-primary: hsl(266, 85%, 58%);
  --color-fd-primary-foreground: hsl(220, 22%, 92%);
  --color-fd-muted: hsl(220, 22%, 92%);
  --color-fd-card: hsl(220, 22%, 92%);
  --color-fd-accent: hsl(223, 16%, 83%);
  --color-fd-accent-foreground: hsl(234, 16%, 35%);
  --color-fd-card-foreground: hsl(234, 16%, 35%);
  --color-fd-muted-foreground: hsl(233, 10%, 47%);
  --color-fd-foreground: hsl(234, 16%, 35%);
  --color-fd-secondary: hsl(220, 22%, 92%);
  --color-fd-background: hsl(220, 23%, 95%);
  --color-fd-ring: hsl(267, 84%, 81%);
}

:root.dark[data-fd-theme="catppuccin"] {
  --color-fd-background: hsl(240, 21%, 15%);
  --color-fd-foreground: hsl(226, 64%, 88%);
  --color-fd-ring: hsl(267, 84%, 81%);
  --color-fd-primary: hsl(267, 84%, 81%);
  --color-fd-popover: hsl(240, 23%, 9%);
  --color-fd-card: hsl(240, 21%, 12%);
  --color-fd-muted: hsl(240, 21%, 12%);
  --color-fd-border: hsl(237, 16%, 23%);
  --color-fd-accent: hsl(237, 16%, 23%);
  --color-fd-secondary: hsl(240, 21%, 12%);
  --color-fd-primary-foreground: hsl(240, 23%, 9%);
  --color-fd-card-foreground: hsl(226, 64%, 88%);
  --color-fd-secondary-foreground: hsl(226, 64%, 88%);
  --color-fd-popover-foreground: hsl(226, 64%, 88%);
  --color-fd-accent-foreground: hsl(226, 64%, 88%);
  --color-fd-muted-foreground: hsl(228, 24%, 72%);
}

:root[data-fd-theme="catppuccin"] #nd-sidebar {
  --color-fd-secondary: hsl(223, 16%, 83%);
  --color-fd-muted: hsl(223, 16%, 83%);
}

:root[data-fd-theme="catppuccin"] #nd-sidebar {
  --color-fd-secondary: hsl(237, 16%, 23%);
  --color-fd-muted: hsl(237, 16%, 23%);
}

:root.dark[data-fd-theme="catppuccin"] #nd-sidebar {
  --color-fd-secondary: hsl(237, 16%, 23%);
  --color-fd-muted: hsl(237, 16%, 23%);
}
/* ... */

